<resources>
    <string name="app_name">Yo App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="chats">Chats</string>
    <string name="contacts_fragment">Hello contacts fragment</string>
    <string name="call_fragment">Hello call fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email (optional)</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone_number">Mobile Number</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter PIN</string>
    <string name="enter_username">Enter Username</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <plurals name="copy_message">
        <item quantity="one">Message Copied</item>
        <item quantity="other">%1$s Messages Copied</item>
    </plurals>
    <string name="copy_messages">Messages Copied</string>
    <string name="add_contact">Add Contact</string>
    <string name="new_group">New Group</string>
    <string name="format_message">Message %1$s</string>
    <string name="format_call">Call %1$s</string>
    <string name="format_add">Add to contacts</string>
    <string name="message_not_sent">Message not sent</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="invite_friends_need_to_implement">Invite friends need to implement.</string>
    <string name="select_atleast_one_contact">Atleast one contact should be selected</string>
    <string name="not_sender">You dont have permission to delete message </string>
    <string name="enter_mobile_number">Enter your mobile number to get started!</string>
    <string name="re_enter_mobile_number">Re-enter your mobile number to get started!</string>
    <string name="magazines_fragment">Hello magazine fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_title_dialer">Dialer</string>
    <string name="dialpad_0_number">0</string>
    <string name="dialpad_1_number">1</string>
    <string name="dialpad_2_number">2</string>
    <string name="dialpad_3_number">3</string>
    <string name="dialpad_4_number">4</string>
    <string name="dialpad_5_number">5</string>
    <string name="dialpad_6_number">6</string>
    <string name="dialpad_7_number">7</string>
    <string name="dialpad_8_number">8</string>
    <string name="dialpad_9_number">9</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>
    <string name="yo_app_call">Yo App Call</string>
    <string name="voip_not_supported_error_message">App to app calls are not supported to your device.</string>
    <string-array name="topics_arrays">
        <item>Top Stories</item>
        <item>Entrepreneurship</item>
    </string-array>
    <string name="title_activity_magazine_article_details">MagazineArticleDetailsActivity</string>
    <string name="connectivity_network_settings">Unable to connect, Please check your network connection.</string>
    <string name="socket_time_out">Uh! something went wrong. Please retry.</string>
    <string name="internal_server_error">Uh! something went wrong. Please retry.</string>
    <string name="enter_mobile_number_started">Enter your mobile number to get started!</string>
    <string name="no_call_history">No call logs history available</string>
    <string name="no_history">No %s history available.</string>
    <string name="network_error">Please check your network connection</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="attach">Attach</string>
    <string name="view_contact">View Contact</string>
    <string name="call">Call</string>
    <string name="invite">Invite</string>
    <string name="title_activity_load_magazine">LoadMagazineActivity</string>
    <string name="zero">0</string>
    <string name="group_creation_error">Group not created. Please try again</string>
    <string name="enter_group_name">Provide a group subject</string>
    <string name="create_group">Create group</string>
    <string name="clear_chat_history">Clear chat history</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="camera">Camera</string>
    <string name="image">Image</string>
    <string name="photo">Photo</string>
    <string name="contact">Contacts</string>
    <string name="empty_country_list_message">No country list available.</string>
    <string name="activity_contry_selection_title">Select Country</string>
    <string name="no_article_added">There is no article added yet.\nClick here to add an article</string>
    <string name="yesterday">"Yesterday "</string>
    <string name="otp_empty">Please enter valid PIN</string>
    <string name="otp_failure">Please enter valid PIN</string>
    <string name="some_thing_wrong">Something went wrong. Please try again later</string>
    <string name="article_added_success">Article added successfully</string>
    <string name="no_text">No Data Available.</string>
    <string name="user_name">Username</string>
    <string name="add_photo">Add Picture</string>
    <string name="profile">Profile</string>
    <string name="okay">okay</string>
    <string name="gallery">Gallery</string>
    <string name="unable_to_fetch">Unable to fetch user data at this moment.Please try again later.</string>
    <string name="resend_otp_text">Re-send PIN</string>
    <string name="sim_country_code">+%1$s %2$s</string>
    <string name="resend">Resend</string>
    <string name="otp_button_submit">Submit</string>
    <string name="share_invite_title">Share and Invite</string>
    <string name="notifications">Notifications</string>
    <string name="sync_contacts">Sync Contacts</string>
    <string name="mobile_number_title">Mobile Number</string>
    <string name="status_title">Status</string>
    <string name="status_char_length">136 characters</string>
    <string name="account_privacy_title">Account Privacy</string>
    <string name="settings_label">Settings</string>
    <string name="user_profile">Profile</string>
    <string name="username_empty">Please provide user name before updating the profile details.</string>
    <string name="change_photo">Change Picture</string>
    <string name="add_picture">Add Picture</string>
    <string name="change_picture">Change Picture</string>
    <string name="no_result_found">No search results found</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="retry">RETRY</string>
    <string name="select_contact">Select Contact</string>
    <string name="sign_out">Sign Out</string>
    <string name="signout_text">Are you sure you want to Sign Out ?</string>
    <string name="empty_fields">Please do not leave fields empty</string>
    <string name="delete_topic_message">Are you sure you want to delete ?</string>
    <string name="invite_link">Checkout YoApp for your smart phone. Download it today from https://www.yoapp.com</string>
    <string name="service_started">%s started</string>
    <string name="call_ended">Call Ended</string>
    <string name="calls_no_network">The call cannot be connected due to poor network connectivity. Please check the internet connection and try again</string>
    <string name="call_account_null">Unable to make the call, please try again</string>
    <string name="not_online">Recipient not online.</string>
    <string name="call_forwarded">Call is  being forwarded</string>
    <string name="no_answer">Sorry there was no answer…</string>
    <string name="ringing">Ringing</string>
    <string name="busy">Sorry, the number was busy.</string>
    <string name="all_busy">All possible destinations are busy</string>
    <string name="invalid_voucher">Invalid Voucher.</string>
    <string name="voucher_recharge_successful">Voucher Recharge Successful</string>
    <string name="invalid_pin_request">Invalid pin Request.</string>
    <string name="voucher_used">Voucher has been used.</string>
    <string name="voucher_expired">Voucher has been expired.</string>
    <string name="unsuccessful_recharge">Unsuccessfully recharge.</string>
    <string name="need_to_implement">This funcationality not yet implemented</string>
    <string name="call_info">Call Info</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="incoming_call">Incoming</string>
    <string name="incoming">Incoming</string>
    <string name="missed_call">Missed call</string>
    <string name="empty_chat">No chat history found.</string>
    <string name="clear_history_dec">Are you sure, yo want to delete all calls history? </string>
    <string name="clear_call_history">Clear Call History</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancel</string>
    <string name="are_you_sure_you_want_to_unfollow">Are you sure you want to Unfollow?</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_more_topics">Follow more topics</string>
    <string name="cancel">Cancel</string>
    <string name="disable_signout">Signout is disabled, will be enabled soon!</string>
    <string name="dialing">Dialing &#8230;</string>
    <string name="balance">Balance </string>
    <string name="failed_add_balance">Failed to add balance.</string>
    <string name="yo_credit">yo! Credit</string>
    <string name="add_balance_title">Add Balance</string>
    <string name="tc"><u>Terms and conditions</u></string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="your_credit_balance">Your Yo! balance :</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="find_people">Yo! People</string>
    <string name="move_to_top">Back to Top</string>
    <string name="liked_articles">Liked Articles</string>
    <string name="my_topics">My Collections</string>
    <string name="my_magazines">My Magazines</string>
    <string name="recent_county_code">Recent Countries/regions</string>
    <string name="all_county_code">All Countries/regions</string>
    <string name="paid_call">Paid Call?</string>
    <string name="calle_not_online">The YO! user you are trying is offline, do you want to make paid call?</string>
    <string name="call_rate">Call rate :</string>
    <string name="add_balance_caps">ADD BALANCE</string>
    <string name="auto_renewal">Enable auto-renewal</string>
    <string name="phone_number_input">0123456789+</string>
    <string name="mobile_number">Enter mobile number</string>
</resources>