<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/chat_contact"
        android:title="@string/message"
        app:showAsAction="always"
        android:icon="@drawable/ic_newchat"
        />

    <item
        android:id="@+id/clear_chat_history"
        android:title="@string/clear_chat_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/create_group"
        android:title="@string/create_group"
        app:showAsAction="never" />

</menu>