<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft="@android:drawable/ic_dialog_alert"
        android:gravity="center_vertical"
        android:text="@string/clear_call_history"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/clear_history_dec"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/cancle"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>