<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="left|center"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/signout_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:text="@string/no"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:text="@string/yes"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>